--- a/front/display/package.json
+++ b/front/display/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.20.0",
     "moment": "^2.28.0",
     "react": "^16.13.1",
+    "react-device-detect": "^1.14.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-swipeable": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
