--- a/nginx/templates/prod/default.conf.template
+++ b/nginx/templates/prod/default.conf.template
@@ -3,6 +3,10 @@ server {
     listen  [::]:80;
     server_name  localhost;
 
+    proxy_read_timeout 300;
+    proxy_connect_timeout 300;
+    proxy_send_timeout 300; 
+
     location /api {
         rewrite   /api/(.*) /$1 break;
         proxy_pass    http://api:${API_PORT};
