--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,8 @@
     "config": "^3.3.1",
     "express": "^4.17.1",
     "moment": "^2.28.0",
+    "mongoose": "^5.10.16",
+    "node-cron": "^2.0.3",
     "open-graph-scraper": "^4.6.0",
     "redis": "^3.0.2",
     "rss-to-json": "^1.1.1"
