--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "description": "Display API",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "moment": "^2.28.0",
