--- a/front/display/package.json
+++ b/front/display/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^6.3.0",
-    "file-loader": "^6.2.0"
+    "file-loader": "^6.2.0",
+    "prettier": "2.2.1"
   }
 }
